Remove usage of Results.wrap